2001-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-imagick-convert-buffer): Don't growl errors when
	Emacs is running in the batch mode.

2001-12-18  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-tcup.el (shimbun-tcup-group-alist): Add skk bbs.

2001-12-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-e21.el (w3m-favicon-use-cache-file): New user option.
	(w3m-favicon-cache-file): Ditto.
	(w3m-favicon-data-cache): New variable.
	(w3m-retrieve-favicon): Use `w3m-favicon-data-cache' or store it.
	(w3m-favicon-save-cache-file): New function.
	(w3m-favicon-load-cache-file): Ditto.

2001-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-e21-toolbar-configurations): Replace
	`auto-resize-tool-bar' to `auto-resize-tool-bars'.

2001-12-17  OHASHI Akira  <bg66@koka-in.org>

	* README.shimbun.ja: Add information for sb-debian-jp.el
	and sb-debian.el.

	* shimbun/sb-debian-jp.el: New file.

	* shimbun/sb-debian.el: Ditto.

	* shimbun/sb-debian-jp.el (shimbun-debian-jp-x-face-alist): New variable.

	* shimbun/sb-debian.el (shimbun-debian-x-face-alist): Ditto.

2001-12-17  Taiki SUGAWARA  <t-suga@atomsystem.co.jp>
	    TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-parse-forms): Change the separater string
	for option tag.

2001-12-12  Taiki SUGAWARA  <t-suga@atomsystem.co.jp>

	* w3m-form.el (w3m-form-parse-forms): If not find selected, first
	element is made into default.

2001-12-14  YAMASHITA Junji  <ysjj@unixuser.org>

	* shimbun/sb-ibm-dev.el (shimbun-make-contents): Condition to
	delete sidebar strictly more.

2001-12-12  YAMASHITA Junji  <ysjj@unixuser.org>

	* shimbun/sb-ibm-dev.el (shimbun-get-headers): Follow change of
	IBM developerWorks library page.

2001-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ibm-dev.el: Don't use the 4th arg for `re-search-*';
	replace `re-search-*' with `search-*' if regexp is not used.

2001-12-14  Hideyuki SHIRAI  <shirai@meadowy.org>
