@@ -300,12 +300,11 @@ Buffer string between BEG and END are replaced with IMAGE."
     (if (and (numberp return)
 	     (zerop return))
 	t
-      (unless noninteractive
-	(message "process `%s' exited abnormally with code `%s'"
-		 w3m-imagick-convert-program
-		 (if (stringp return)
-		     (string-as-multibyte return)
-		   return)))
+      (message "process `%s' exited abnormally with code `%s'"
+	       w3m-imagick-convert-program
+	       (if (stringp return)
+		   (string-as-multibyte return)
+		 return))
       nil)))
 
 (defun w3m-imagick-convert-data (data from-type to-type &rest args)
@@ -334,11 +333,13 @@ a large number of bits per pixel."
 `convert' does not support a Windoze ico format.  You can inhibit the
 use of ImageMagick absolutely by setting this option to nil."
   :get (lambda (symbol)
-	 (and (default-value symbol)
+	 (and (not noninteractive)
+	      (default-value symbol)
 	      (w3m-imagick-convert-usable-p)))
   :set (lambda (symbol value)
 	 (custom-set-default symbol
-			     (and value
+			     (and (not noninteractive)
+				  value
 				  (w3m-imagick-convert-usable-p))))
   :group 'w3m
   :type 'boolean)
